Update .env.example to reflect correct Redis configuration with host, port, and password variables

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ DIALECT_DB=postgres
 DB_URL=${{Postgres.DATABASE_URL}}
 
 # Redis
-REDIS_URL=${{Redis.REDIS_URL}}
-REDIS_PASSWORD=
+REDIS_URL=${{Redis.REDISHOST}}:${{Redis.REDISPORT}}
+REDIS_PASSWORD=${{Redis.REDISPASSWORD}}
 REDIS_TLS=false
 
 # Local docker-compose only (Postgres service)
